@@ -1,5 +1,7 @@
 2003-09-04  Per Bothner  <per@bothner.com>
 
+	* CallContext.java (getRestArgsArray, getRestArgsList):  New methods.
+
 	* CpsMethodProc.java (getName):  New method.
 
 2003-08-08  Daniel Bonniot  <Daniel.Bonniot@inria.fr>
